commit in class 20/12

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>Hawaiian Roadtrip</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/typo.css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
   </head>
   <body>
 <header>
 
 <div class="cover">
 <h1> anaelle rouquette</h1>
-<p> Design Graphic Student </p>
+<h2> Design Graphic Student </h2>
 </div>
 </header>
 
@@ -25,16 +25,22 @@
 
 </section>
 <div class="nastyadvert">
-  <h1>186 DAYS OF PICTURE</h1>
+  <h3>186 DAYS OF PICTURE</h3>
 
 </div>
 <section>
+  <div class="myicones">
 
+   <img src="icones/camera.png" alt="">
+       <img src="icones/shaka.png" alt="">
+     <img src="icones/backpack.png" alt="">
 
-<h4><p>"The hawaiian way of living is the happiest way to live. Sharing moment with friends, strangers, or family around the beauty of the island. I met many peolple who show me the real adventure, surfing at the sunrise, having a big thrill doing a hike, meeting turtles in a secret beach or just sharing a happy moment with the peolple you like. This pictures are the proof of some of this moments, and my memories of an incredible part of my life" </p></h4>
+  </div>
 
 
 </section>
+
+
 <div class="mypictures">
   <ul>
     <li> <img src="images/photos/blacksand.jpg" alt=""></li>
